# roscompile

magical_ros2_conversion_tool/: CMakeLists.txt  package.xml  setup.py
magical_ros2_conversion_tool/scripts/: ros2_conversion
magical_ros2_conversion_tool/src/magical_ros2_conversion_tool/: cmake.py  cplusplus.py  generators.py  manifest.py  util.py
ros_introspection/src/ros_introspection/: cmake.py  package_xml.py  resource_list.py
